infrastructure/cluster/k3s-cluster/argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.treboul.localhost`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
          scheme: http
      # 'priority' must > traefik-dashboard priority(46) to avoid 404 /api/v1/settings
      priority: 100
  tls: {}
